[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pre-agent"
version = "0.1.0"
description = "Pipeline Reliability Engineer — multi-agent Fivetran diagnostics"
requires-python = ">=3.11"
dependencies = [
    "google-adk==2.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "google-cloud-firestore>=2.16.0",
]

[project.scripts]
pre-agent = "main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "orchestrator",
    "agents",
    "shared",
    "integration",
]
include = ["main.py", "models.py"]
